# systemd

./: meson.build
async-csa-build/: cdb_async_csa.json  cdb_async_csa_example.json  cdb_async_csa_examples.json  compile_commands.json  csa_args.txt  filter_compile_commands.py  include_dir.txt
src/async-csa/: async_scheduler.c  meson.build  test_cache.c
src/async-csa/scheduler/: async_machined.c  meson.build
src/async-csa/tests/: meson.build  test_clear_cache.c  test_clear_once_multiple_caches.c  test_interprocedural_clear.c  test_reset_cached_val.c
src/machine/: image-dbus.c  machined.c
src/shared/: bus-polkit.c  bus-polkit.h
