test_clear_cache = files('''
    test_clear_cache.c
'''.split())

test_clear_once_multiple_cache = files('''
    test_clear_once_multiple_caches.c
'''.split())

test_interprocedural_clear = files('''
    test_interprocedural_clear.c
'''.split())

test_reset_cache = files('''
    test_reset_cached_val.c
'''.split())

async_csa_includes = include_directories(
    '../../machine'
)